--- a/test/fixtures/drivers.yml
+++ b/test/fixtures/drivers.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: drivers
+#
+#  id           :integer          not null, primary key
+#  name         :string
+#  username     :string
+#  password     :string
+#  samsara_id   :string
+#  phone_number :string
+#  status       :integer
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
