Adding kafka processing

--- a/test/fixtures/kafka_messages.yml
+++ b/test/fixtures/kafka_messages.yml
@@ -2,26 +2,22 @@
 
 # == Schema Information
 #
-# Table name: events
+# Table name: kafka_messages
 #
 #  id                :integer          not null, primary key
-#  event_type        :string
+#  key               :string
 #  payload           :json
-#  processing_errors :text
-#  source            :string
-#  status            :string
+#  processing_errors :text             default("")
+#  topic             :string           not null
 #  created_at        :datetime         not null
 #  updated_at        :datetime         not null
-#  event_id          :string
 #
 one:
-  source: MyString
+  topic: MyString
   payload: 
-  status: MyString
   processing_errors: MyText
 
 two:
-  source: MyString
+  topic: MyString
   payload: 
-  status: MyString
   processing_errors: MyText
