use different storage path

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,16 +25,16 @@ test:
 production:
   primary:
     <<: *default
-    database: /usr/storage/production.sqlite3
+    database: /var/data/production.sqlite3
   cache:
     <<: *default
-    database: /usr/storage/production_cache.sqlite3
+    database: /var/data/production_cache.sqlite3
     migrations_paths: db/cache_migrate
   queue:
     <<: *default
-    database: /usr/storage/production_queue.sqlite3
+    database: /var/data/production_queue.sqlite3
     migrations_paths: db/queue_migrate
   cable:
     <<: *default
-    database: /usr/storage/production_cable.sqlite3
+    database: /var/data/production_cable.sqlite3
     migrations_paths: db/cable_migrate
