--- a/render.yaml
+++ b/render.yaml
@@ -13,24 +13,17 @@ services:
     buildCommand: "./bin/render-build.sh"
     startCommand: "./bin/render-start.sh"
     initialDeployHook: "./bin/render-seed.sh"
-    disk:
-      name: sqlite3-data
-      mountPath: /var/data
-      sizeGB: 1
-
-    # envVars:
-    #   - key: RAILS_MASTER_KEY
-    #     sync: false
-    #   - key: DATABASE_URL
-    #     fromDatabase:
-    #       name: postgres
-    #       property: connectionString
-    #   # - key: REDIS_URL
-    #   #   fromService:
-    #   #     type: redis
-    #   #     name: redis
-    #   #     property: connectionString
-    #   - fromGroup: default-env
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: postgres
+          property: connectionString
+      # - key: REDIS_URL
+      #   fromService:
+      #     type: redis
+      #     name: redis
+      #     property: connectionString
+      # - fromGroup: default-env
 
   # - type: redis
   #   name: redis
@@ -39,28 +32,21 @@ services:
   #   plan: free # optional (defaults to starter)
   #   maxmemoryPolicy: noeviction # optional (defaults to allkeys-lru)
 
-  # - type: worker
-  #   name: sidekiq-worker
-  #   env: ruby
-  #   plan: starter # no free option for bg workers
-  #   region: ohio # the region must be consistent across all services for the internal keys to be read
-  #   buildCommand: './bin/render-build-sidekiq.sh'
-  #   startCommand: './bin/render-start-sidekiq.sh'
-  #   envVars:
-  #     - key: DATABASE_URL
-  #       fromDatabase:
-  #         name: postgres
-  #         property: connectionString
-  #     - key: REDIS_URL
-  #       fromService:
-  #         name: redis
-  #         type: redis
-  #         property: connectionString
-  #     - key: RAILS_MASTER_KEY
-  #       sync: false
-  #     - fromGroup: default-env
-# databases:
-#   - name: postgres
-#     plan: starter
-#     region: ohio # the region must be consistent across all services for the internal keys to be read
-#     ipAllowList: [] # only allow internal connections
+  - type: worker
+    name: karafka-consumer-worker
+    env: ruby
+    plan: starter # no free option for bg workers
+    region: ohio # the region must be consistent across all services for the internal keys to be read
+    buildCommand: "./bin/render-build-karafka.sh"
+    startCommand: "./bin/render-start-karafka.sh"
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: postgres
+          property: connectionString
+
+databases:
+  - name: postgres
+    plan: starter
+    region: ohio # the region must be consistent across all services for the internal keys to be read
+    ipAllowList: [] # only allow internal connections
