--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: postgres
+          name: mini-tms-postgres
           property: connectionString
       # - key: REDIS_URL
       #   fromService:
@@ -42,11 +42,11 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: postgres
+          name: mini-tms-postgres
           property: connectionString
 
 databases:
-  - name: postgres
-    plan: starter
+  - name: mini-tms-postgres
+    plan: basic-256mb
     region: ohio # the region must be consistent across all services for the internal keys to be read
     ipAllowList: [] # only allow internal connections
