--- a/test/fixtures/chat_messages.yml
+++ b/test/fixtures/chat_messages.yml
@@ -4,7 +4,7 @@
 #
 # Table name: chat_messages
 #
-#  id          :integer          not null, primary key
+#  id          :bigint           not null, primary key
 #  body        :string           default(""), not null
 #  read        :boolean          default(FALSE), not null
 #  sender_name :string
@@ -22,8 +22,8 @@
 #
 # Foreign Keys
 #
-#  driver_id  (driver_id => drivers.id)
-#  user_id    (user_id => users.id)
+#  fk_rails_...  (driver_id => drivers.id)
+#  fk_rails_...  (user_id => users.id)
 #
 one:
   driver: one
