--- a/test/fixtures/form_templates.yml
+++ b/test/fixtures/form_templates.yml
@@ -4,7 +4,7 @@
 #
 # Table name: form_templates
 #
-#  id                  :integer          not null, primary key
+#  id                  :bigint           not null, primary key
 #  slug                :string
 #  template_json       :json
 #  title               :string
@@ -20,7 +20,7 @@
 #
 # Foreign Keys
 #
-#  user_id  (user_id => users.id)
+#  fk_rails_...  (user_id => users.id)
 #
 one:
   samsara_id: MyString
