--- a/test/fixtures/kafka_messages.yml
+++ b/test/fixtures/kafka_messages.yml
@@ -4,7 +4,7 @@
 #
 # Table name: kafka_messages
 #
-#  id                :integer          not null, primary key
+#  id                :bigint           not null, primary key
 #  key               :string
 #  payload           :json
 #  processing_errors :text             default("")
