--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -4,7 +4,7 @@
 #
 # Table name: locations
 #
-#  id                :integer          not null, primary key
+#  id                :bigint           not null, primary key
 #  formatted_address :string
 #  geofence          :json
 #  latitude          :float
@@ -22,7 +22,7 @@
 #
 # Foreign Keys
 #
-#  user_id  (user_id => users.id)
+#  fk_rails_...  (user_id => users.id)
 #
 one:
   user: one
