--- a/test/fixtures/stops.yml
+++ b/test/fixtures/stops.yml
@@ -4,7 +4,7 @@
 #
 # Table name: stops
 #
-#  id                       :integer          not null, primary key
+#  id                       :bigint           not null, primary key
 #  actual_arrival_time      :datetime
 #  actual_departure_time    :datetime
 #  en_route_time            :datetime
@@ -26,8 +26,8 @@
 #
 # Foreign Keys
 #
-#  location_id  (location_id => locations.id)
-#  route_id     (route_id => routes.id)
+#  fk_rails_...  (location_id => locations.id)
+#  fk_rails_...  (route_id => routes.id)
 #
 one:
   samsara_id: MyString
