--- a/test/fixtures/trailers.yml
+++ b/test/fixtures/trailers.yml
@@ -4,7 +4,7 @@
 #
 # Table name: trailers
 #
-#  id            :integer          not null, primary key
+#  id            :bigint           not null, primary key
 #  license_plate :string
 #  make          :string
 #  model         :string
@@ -23,7 +23,7 @@
 #
 # Foreign Keys
 #
-#  user_id  (user_id => users.id)
+#  fk_rails_...  (user_id => users.id)
 #
 one:
   name: MyString
