--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -4,7 +4,7 @@
 #
 # Table name: orders
 #
-#  id                    :integer          not null, primary key
+#  id                    :bigint           not null, primary key
 #  description           :text
 #  requested_delivery_at :datetime
 #  requested_pickup_at   :datetime
@@ -23,9 +23,9 @@
 #
 # Foreign Keys
 #
-#  from_location_id  (from_location_id => locations.id)
-#  to_location_id    (to_location_id => locations.id)
-#  user_id           (user_id => users.id)
+#  fk_rails_...  (from_location_id => locations.id)
+#  fk_rails_...  (to_location_id => locations.id)
+#  fk_rails_...  (user_id => users.id)
 #
 one:
   from_location: one
