more mini tms cleanup

--- a/test/fixtures/kafka_messages.yml
+++ b/test/fixtures/kafka_messages.yml
@@ -5,6 +5,7 @@
 # Table name: kafka_messages
 #
 #  id                :bigint           not null, primary key
+#  event_type        :string
 #  key               :string
 #  payload           :json
 #  processing_errors :text             default("")
