--- a/config/database.yml
+++ b/config/database.yml
@@ -80,9 +80,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: mini_tms_production
-    username: mini_tms
-    password: <%= ENV["mini_tms_DATABASE_PASSWORD"] %>
+    url: <%= ENV["DATABASE_URL"] %>
   cache:
     <<: *primary_production
     database: mini_tms_production_cache
